# Mi

./: 1.txt  start_sim.sh  开发进度.md  方案设计.md  架构设计.md
cyberdog_sim/src/cyberdog_locomotion/common/config/: cyberdog-ctrl-user-parameters.yaml  cyberdog2-ctrl-user-parameters.yaml
cyberdog_sim/src/cyberdog_locomotion/common/src/command_interface/: command_interface.cpp
cyberdog_sim/src/cyberdog_locomotion/control/src/convex_mpc/: convex_mpc_loco_gaits.cpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_example/src/: keybroad_commander.cpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/: CMakeLists.txt  package.xml
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/include/cyberdog_race/: debug_config.hpp  gamepad_lcmt.hpp  motion_ctrl.hpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/include/cyberdog_race/stages/: stage1.hpp  stage2.hpp  stage3.hpp  stage4.hpp  stage5.hpp  stage6.hpp  stage_base.hpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/include/cyberdog_race/vision/: ball_detector.hpp  lane_detector.hpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/src/: main.cpp  motion_ctrl.cpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/src/stages/: stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp  stage5.cpp  stage6.cpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_race/src/vision/: ball_detector.cpp  lane_detector.cpp
cyberdog_sim/src/cyberdog_simulator/cyberdog_robot/cyberdog_description/xacro/: gazebo.xacro  robot.xacro
cyberdog_sim/src/cyberdog_simulator/cyberdog_visual/rviz/: cyberdog_visual2.rviz
