<?xml version="1.0"?>
<package format="3">
  <name>cyberdog_race</name>
  <version>0.0.1</version>
  <description>CyberDog race controller for 2026 competition</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cyberdog_msg</depend>
  <depend>lcm</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
